Fix user-select having no effect on Safari

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -6,3 +6,10 @@
 .children-default-cursor .clickable {
     cursor: pointer;
 }
+
+.noselect {
+    user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
+}
